# genesis

./: .gitignore  AUTO_FIX_COMPLETE.md  AUTO_HEALING_IMPLEMENTATION.md  Dockerfile  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INFINITE_MODE_IMPLEMENTATION.md  MERGE_COMPLETE.md  README.md  SECURITY_SUMMARY.md  docker-compose.yml  genesis_manifest.json  pyproject.toml  requirements.txt
.github/workflows/: auto-merge.yml  ci.yml  devops-team.yml  genesis-loop.yml  infinity-orchestrator.yml  org-sync.yml  pr-automation.yml  security.yml
docker/: Dockerfile.core
docs/: AUTO_HEALING.md  DEVOPS_TEAM.md  INFINITE_MODE.md  SYSTEM_ARCHITECTURE.md  agents.md  architecture.md  benchmarking.md  deployment.md  onboarding.md
infra/helm/genesis/: Chart.yaml  values.yaml
infra/terraform/: main.tf
output/loop/: cycle_results.json  final_report.json
prompts/: system_instructions.md
src/frontend/: package.json  tailwind.config.js
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/genesis/: __init__.py  cli.py
src/genesis/agents/: __init__.py  base.py  builder.py  deployment.py  evolution.py  idea_generator.py  memory.py  planner.py  validator.py
src/genesis/analysis/: __init__.py  repo_scanner.py
src/genesis/benchmarking/: __init__.py  benchmark.py
src/genesis/core/: __init__.py  agent_team.py  (+16 more)
tests/: __init__.py  conftest.py  test_agent_team.py  test_agent_team_devops.py  test_devops_team.py  test_healing_agent.py  test_orchestrator_devops.py  test_org_sync.py  test_repo_scanner.py  test_workflow_monitor.py
tests/integration/: test_full_system.py
tests/unit/: test_agents.py  test_benchmarking.py  test_orchestrator.py  test_repo_scanner.py
(+2 files in other folders)
